--- a/css/main.css
+++ b/css/main.css
@@ -26,6 +26,25 @@ img {
   position: relative;
 }
 
+/* BUTTON*/
+.btn {
+  display: inline-block;
+  padding: 6px 20px;
+  border: 2px solid currentColor; /*따로 색을 정하지 않을 경우 부모의 색과 같은 색*/
+  border-radius: 5px;
+  font-size: 15px;
+}
+.btn--light-green{
+  color: #076443;
+  border: #076443;
+  transition: 0.6s;
+}
+.btn--light-green:hover{
+  background-color: #076443;
+  border-color: black;
+  color: white;
+  text-decoration: underline;
+}
 /*HEADER*/
 header{
   width: 100%;
@@ -201,3 +220,70 @@ header .badges .badge img {
   }
   /*이거하면 화면이 작아져도 계속 배지가 옆에 있음*/
 }
+
+/* VISUAL */
+.visual {
+  /*position: relative;
+  height: 770px;
+  background-position: center;*/
+  position: relative;
+  margin-top: 120px;
+  background-image: url("../images/visual_bg.jpg"); /*../를 사용하여 상위로 해야함*/
+  background-size: contain;
+  /*background-position: center;*/
+  background-repeat: no-repeat;
+}
+.visual .inner {
+  /*position: absolute;
+  top: 150px;
+  height: 770px;
+  background-position: center;*/
+  position: relative;
+  height: 640px;
+}
+.visual .inner .slogan{
+  /*position: absolute;
+  width: 340px;
+  top: 150px;
+  left: 70px;*/
+  position: absolute;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  width: 340px;
+  top: 180px;
+  left: -130px;
+}
+.visual .inner .slogan img{
+  width: 340px;
+}
+.visual .inner .slogan .btn{
+  position: absolute;
+}
+.visual .inner .img{
+  position: absolute;
+}
+.visual .inner .item-1{}
+.visual .inner .item-2{}
+.visual .inner .item-3{}
+/*.visual .inner img:not(:nth-child(1)){
+  margin-left: 200px;
+}
+.visual .inner img:nth-child(2){
+  position: absolute;
+  width: 290px;
+  top: 120px;
+  left: 340px;
+}
+.visual .inner img:nth-child(3){
+  position: absolute;
+  width: 310px;
+  top: 208px;
+  left: 538px;
+}
+.visual .inner img:nth-child(4){
+  position: absolute;
+  width: 310px;
+  top: 162px;
+  left: 762px;
+}*/
