--- a/css/main.css
+++ b/css/main.css
@@ -36,7 +36,7 @@ img {
 }
 .btn--light-green{
   color: #076443;
-  border: #076443;
+  border-color: #076443;
   transition: 0.6s;
 }
 .btn--light-green:hover{
@@ -229,9 +229,10 @@ header .badges .badge img {
   position: relative;
   margin-top: 120px;
   background-image: url("../images/visual_bg.jpg"); /*../를 사용하여 상위로 해야함*/
-  background-size: contain;
-  /*background-position: center;*/
+  /*background-size: contain;*/
+  background-position: center;
   background-repeat: no-repeat;
+  background-size: 106% 100%;
 }
 .visual .inner {
   /*position: absolute;
@@ -259,13 +260,30 @@ header .badges .badge img {
 }
 .visual .inner .slogan .btn{
   position: absolute;
+  top: 250px;
 }
 .visual .inner .img{
   position: absolute;
+  width: 340px;
 }
-.visual .inner .item-1{}
-.visual .inner .item-2{}
-.visual .inner .item-3{}
+.visual .inner .item1{
+  position: absolute;
+  width: 290px;
+  top: 120px;
+  left: 340px;
+}
+.visual .inner .item2{
+  position: absolute;
+  width: 310px;
+  top: 208px;
+  left: 538px;
+  }
+.visual .inner .item3{
+  position: absolute;
+  width: 310px;
+  top: 162px;
+  left: 762px;
+}
 /*.visual .inner img:not(:nth-child(1)){
   margin-left: 200px;
 }
@@ -287,3 +305,19 @@ header .badges .badge img {
   top: 162px;
   left: 762px;
 }*/
+
+/*NOTICE*/
+.notice {}
+.notice .notice-line{}
+.notice .notice-line .bg-left{}
+.notice .notice-line .bg-right{}
+.notice .notice-line .inner{}
+.notice .notice-line .inner .inner__left{}
+.notice .notice-line .inner .inner__left h1{}
+.notice .notice-line .inner .inner__left div{}
+.notice .notice-line .inner .inner__left a{}
+.notice .notice-line .inner .inner__left a span{} 
+.notice .notice-line .inner .inner__right{} 
+.notice .notice-line .inner .inner__right h1{}
+.notice .notice-line .inner .inner__right a{}
+.notice .notice-line .inner .inner__right a span{}
