--- a/css/main.css
+++ b/css/main.css
@@ -13,6 +13,7 @@ body{
   font-weight: 400;
   line-height: 1.4;
   font-family: 'Nanum Gothic', sans-serif;
+  height: 30000px;
 }
 a {
   text-decoration: none;
@@ -44,6 +45,16 @@ img {
 .btn--light-green:hover{
   background-color: #076443;
   border-color: black;
+  color: white;
+  text-decoration: underline;
+}
+.btn--brown {
+  color: #633510;
+  border-color: #633510;
+  transition: 0.6s;
+}
+.btn--brown:hover {
+  background-color: #633510;
   color: white;
   text-decoration: underline;
 }
@@ -460,4 +471,57 @@ header .badges .badge img {
   position: absolute;
   right: 0;
   bottom: 0;
+}
+
+/* ELSALVADOR*/
+.elsalvador {
+  position: relative;
+  height: 570px;
+  background-image: url("../images/elsalvador_bg.jpg");
+  background-size: cover;
+  background-position: center;
+  overflow: hidden;
+}
+.elsalvador .inner {
+  /*position: absolute;
+  display: flex;
+  left: 40%;
+  top: 20%;*/
+  position: relative;
+}
+.elsalvador .inner .elsalvador__item {
+  /*position: absolute;
+  width: 310px;
+  left: -200px;
+  top: -40px;*/
+  position: absolute;
+  width: 310px;
+  top: 70px;
+  left: 110px;
+  transform: translateX(-700px);
+  opacity: 0;
+  transition: 2.5s;
+}
+.elsalvador .inner .elsalvador__contents {
+  /*position: absolute;
+  left: 250px;
+  top: 100px;*/
+  position: absolute;
+  width: 339px;
+  top: 180px;
+  right: 140px;
+  transform: translateX(900px);
+  opacity: 0;
+  transition: 2.5s;
+}
+.elsalvador:active .inner .elsalvador__item,
+.elsalvador:active .inner .elsalvador__contents{
+  opacity: 1;
+  transform: translateX(0);
+}
+.elsalvador .inner .elsalvador__contents .item-text {}
+.elsalvador .inner .elsalvador__contents .btn.btn--brown {
+  /*position: absolute;
+  top: 130px;*/
+  margin-top: 40px;
 }
