--- a/css/main.css
+++ b/css/main.css
@@ -13,6 +13,7 @@ body{
   font-weight: 400;
   line-height: 1.4;
   font-family: 'Nanum Gothic', sans-serif;
+  height: 300000px;
 }
 a {
   text-decoration: none;
@@ -760,7 +761,7 @@ header .badges .badge img {
   top: 290px;
   right: 330px;
   transform: translateX(800px);
-  transition: 1.5s;
+  transition: 3s;
   opacity: 0;
 }
 .store:active .inner .store__img-1,.store:active .inner .store__img-2,
@@ -776,4 +777,53 @@ header .badges .badge img {
 .store:active .inner .btn.btn--black {
   transform: translateX(0);
   transition: transform 3s, background-color 0.6s, color 0.6, text-decoration 0.6s;
+  opacity: 1;
+}
+
+/* FOOTER */
+footer {
+  position: relative;
+  background-color: #2c2a29;
+  padding: 30px 0;
+}
+footer .inner {}
+
+/* FOOTER MENU */
+footer .inner .footer__menu {
+  display: flex;
+  color: white;
+}
+footer .inner .footer__menu .left {
+  width: 90%;
+}
+footer .inner .footer__menu .left .menu{
+  display: flex;
+}
+footer .inner .footer__menu .left .menu > li{
+  width: 20%;
+  /*padding: 20px;*/
+}
+footer .inner .footer__menu .left .menu > li >ul {}
+footer .inner .footer__menu .left .menu > li >ul > a {
+  display: block;
+  font-size: 14px;
+  color: white;
+  margin: 10px 0;
+}
+footer .inner .footer__menu .left .menu > li >ul > li {
+  font-size: 12px;
+  /*margin-top: 12px;*/
+  margin: 7px 0;
+  cursor: pointer;
+}
+footer .inner .footer__menu .left .menu > li >ul > a:hover,
+footer .inner .footer__menu .left .menu > li >ul > li:hover{
+  text-decoration: underline;
+}
+
+footer .inner .footer__menu .right {
+  width: 10%;
+}
+footer .inner .footer__menu .right img {
+  float: right;
 }
