--- a/css/main.css
+++ b/css/main.css
@@ -827,3 +827,47 @@ footer .inner .footer__menu .right {
 footer .inner .footer__menu .right img {
   float: right;
 }
+
+/* FOOTER SUBMENU */
+.footer__sub-menu{
+  position: relative;
+}
+.footer__sub-menu > ul{
+  display: flex;
+  color: #ccc;
+  justify-content: center;
+  font-size: 12px;
+  margin-top: 50px;
+}
+.footer__sub-menu > ul a{
+  color: #ccc;
+}
+.footer__sub-menu > ul > li:first-child > a{
+
+  color: #00b050;
+}
+.footer__sub-menu > ul a:hover{
+  text-decoration: underline;
+}
+.footer__sub-menu > ul .countour{
+  margin: 0 10px;
+  color: #999;
+}
+
+/* FOOTER BTN */
+.footer__btn{
+  position: relative;
+  display: flex;
+  justify-content: center;
+  margin: 10px 0;
+}
+
+/* FOOTER COPYLIGHT */
+.footer__copylight {
+  display: flex;
+  justify-content: center;
+  color: #999999;
+  font-size: 12px;
+  margin-top: 30px;
+}
+.footer__copylight p{}
