--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,6 @@ body{
   font-weight: 400;
   line-height: 1.4;
   font-family: 'Nanum Gothic', sans-serif;
-  height: 300000px;
 }
 a {
   text-decoration: none;
@@ -856,18 +855,21 @@ footer .inner .footer__menu .right img {
 
 /* FOOTER BTN */
 .footer__btn{
-  position: relative;
-  display: flex;
-  justify-content: center;
-  margin: 10px 0;
+  margin-top: 10px;
+  text-align: center;
+}
+.footer__btn .btn.btn--white{
+  margin-right: 5px;
+  font-size: 12px;
 }
 
 /* FOOTER COPYLIGHT */
 .footer__copylight {
-  display: flex;
-  justify-content: center;
+  text-align: center;
   color: #999999;
   font-size: 12px;
   margin-top: 30px;
 }
-.footer__copylight p{}
+.footer__copylight p{
+  line-height: 30px;
+}
