--- a/css/main.css
+++ b/css/main.css
@@ -132,7 +132,6 @@ header .inner .sub-menu .sub-menu__menu{
   font-size: 13px;*/
   display: flex;
 }
-header .inner .sub-menu .sub-menu__menu > li{}
 header .inner .sub-menu .sub-menu__menu > li:not(:first-child)::before {
   content: "|";
   position: absolute;
@@ -191,7 +190,6 @@ header .inner .main-menu {
   right: 0;
   bottom: 0;
 }
-header .inner .main-menu .item{}
 header .inner .main-menu .item:hover .item__name{
   background-color: #2c2a29;
   color: #669900;
@@ -237,7 +235,6 @@ header .inner .main-menu .item .item__contents .item__contents__menu .inner > li
 header .inner .main-menu .item .item__contents .item__contents__menu .inner > li > a:hover{
   text-decoration: underline;
 }
-header .inner .main-menu .item .item__contents .item__contents__menu .inner > li > ul{}
 header .inner .main-menu .item .item__contents .item__contents__menu .inner > li > ul > li{
   color: #999;
   font-size: 12px;
@@ -254,7 +251,6 @@ header .badges {
   top: 150px;
   left: calc(1100px + (100vw - 1100px) / 2);
 }
-header .badges .badge {}
 header .badges .badge img {
   width:140px;
   cursor: pointer;
@@ -479,6 +475,7 @@ header .badges .badge img {
   margin-right: 6px;
   font-weight: bold;
 }
+/*같은 디자인을 적용할 때 ,를 사용함*/
 .rewards .inner .rewards__items .rewards__items__register .buttons .btn--login,
 .rewards .inner .rewards__items .rewards__items__card .buttons .btn--login{
   border-color: white;
@@ -551,7 +548,6 @@ header .badges .badge img {
   opacity: 1;
   transform: translateX(0);
 }
-.elsalvador .inner .elsalvador__contents .item-text {}
 .elsalvador .inner .elsalvador__contents .btn.btn--brown {
   /*position: absolute;
   top: 130px;*/
@@ -589,7 +585,6 @@ header .badges .badge img {
   background-repeat: no-repeat;
   opacity: 0;
 }
-.ethiopia .inner{}
 .ethiopia:active::before,
 .ethiopia:active::after{
   transition: 1.5s;
@@ -625,7 +620,6 @@ header .badges .badge img {
   background-attachment: fixed; /*화면이 따라오는거같은 느낌을 들게함*/
   overflow: hidden;
 }
-.favorite .inner{}
 .favorite .inner .favorite__content1{
   position: absolute;
   width: 258px;
@@ -669,7 +663,6 @@ header .badges .badge img {
   background-position: center 50px;
   overflow: hidden;
 }
-.magazine .inner{}
 .magazine .inner .magazine__content{
   position: absolute;
   width: 588px;
@@ -785,8 +778,6 @@ footer {
   background-color: #2c2a29;
   padding: 30px 0;
 }
-footer .inner {}
-
 /* FOOTER MENU */
 footer .inner .footer__menu {
   display: flex;
@@ -802,7 +793,6 @@ footer .inner .footer__menu .left .menu > li{
   width: 20%;
   /*padding: 20px;*/
 }
-footer .inner .footer__menu .left .menu > li >ul {}
 footer .inner .footer__menu .left .menu > li >ul > a {
   display: block;
   font-size: 14px;
